# scikit-learn-tut

./: README.md  hello.py  pyproject.toml
notebooks/: FeatureScaling.ipynb
